feat: add gatling module and Specification tests for all 4 endpoints