@@ -27,7 +27,10 @@
 		<url/>
 	</scm>
 	<properties>
-		<java.version>17</java.version>
+		<java.version>21</java.version>
+		<gatling.version>3.13.5</gatling.version>
+		<gatling-maven-plugin.version>4.9.6</gatling-maven-plugin.version>
+		<groovy.version>4.0.23</groovy.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -113,5 +116,117 @@
 			</plugin>
 		</plugins>
 	</build>
+
+	<profiles>
+		<profile>
+			<id>gatling</id>
+			<dependencies>
+				<dependency>
+					<groupId>io.gatling.highcharts</groupId>
+					<artifactId>gatling-charts-highcharts</artifactId>
+					<version>${gatling.version}</version>
+					<scope>test</scope>
+				</dependency>
+				<dependency>
+					<groupId>io.gatling</groupId>
+					<artifactId>gatling-core-java</artifactId>
+					<version>${gatling.version}</version>
+					<scope>test</scope>
+				</dependency>
+				<dependency>
+					<groupId>io.gatling</groupId>
+					<artifactId>gatling-http-java</artifactId>
+					<version>${gatling.version}</version>
+					<scope>test</scope>
+				</dependency>
+				<dependency>
+					<groupId>org.apache.groovy</groupId>
+					<artifactId>groovy</artifactId>
+					<version>${groovy.version}</version>
+					<scope>test</scope>
+				</dependency>
+			</dependencies>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>build-helper-maven-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>add-gatling-test-source</id>
+								<phase>generate-test-sources</phase>
+								<goals>
+									<goal>add-test-source</goal>
+								</goals>
+								<configuration>
+									<sources>
+										<source>src/gatling/groovy</source>
+									</sources>
+								</configuration>
+							</execution>
+							<execution>
+								<id>add-gatling-test-resource</id>
+								<phase>generate-test-resources</phase>
+								<goals>
+									<goal>add-test-resource</goal>
+								</goals>
+								<configuration>
+									<resources>
+										<resource>
+											<directory>src/gatling/resources</directory>
+										</resource>
+									</resources>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.codehaus.gmavenplus</groupId>
+						<artifactId>gmavenplus-plugin</artifactId>
+						<version>3.0.2</version>
+						<executions>
+							<execution>
+								<goals>
+									<goal>compileTests</goal>
+								</goals>
+							</execution>
+						</executions>
+						<configuration>
+							<testSources>
+								<testSource>
+									<directory>${project.basedir}/src/gatling/groovy</directory>
+									<includes>
+										<include>**/*.groovy</include>
+									</includes>
+								</testSource>
+							</testSources>
+						</configuration>
+					</plugin>
+					<plugin>
+						<groupId>io.gatling</groupId>
+						<artifactId>gatling-maven-plugin</artifactId>
+						<version>${gatling-maven-plugin.version}</version>
+						<configuration>
+							<runMultipleSimulations>true</runMultipleSimulations>
+							<jvmArgs>
+								<jvmArg>--add-opens</jvmArg>
+								<jvmArg>java.base/java.lang=ALL-UNNAMED</jvmArg>
+								<jvmArg>--add-opens</jvmArg>
+								<jvmArg>java.base/java.lang.invoke=ALL-UNNAMED</jvmArg>
+								<jvmArg>--add-opens</jvmArg>
+								<jvmArg>java.base/java.io=ALL-UNNAMED</jvmArg>
+								<jvmArg>--add-opens</jvmArg>
+								<jvmArg>java.base/java.nio=ALL-UNNAMED</jvmArg>
+								<jvmArg>--add-opens</jvmArg>
+								<jvmArg>java.base/java.util=ALL-UNNAMED</jvmArg>
+								<jvmArg>--add-opens</jvmArg>
+								<jvmArg>java.base/sun.nio.ch=ALL-UNNAMED</jvmArg>
+							</jvmArgs>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 
 </project>
